<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lbsshare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="deleteConfirmMessage">Are you sure to delete this friend?</string>
    <string name="deletePrompting">Delete Prompting</string>
    <string name="share_periodically">periodically (second)</string>
    <string name="share_by_distance">Share when move (meter)</string>
    <string name="text_share_location_setting">Share Location Setting</string>
    <string name="lab_save">Save</string>
    <string name="lab_cancle">Cancel</string>
    <string name="lab_ok">OK</string>
    <string name="lab_add">Add</string>
    <string name="lab_add_friend">Add friend</string>
    <string name="lab_create_group">Create Group</string>
    <string name="lab_search_group">Search Group</string>
    <string name="wait">Please wait</string>
    <string name="connecting">Connecting server...</string>
    <string name="connect_failed">Connect Failed</string>
    <string name="connect_disconnectd">Disconnected</string>
    <string name="restart_app">Can not connect to server, please check your
		network, then restart!</string>
    <string name="disconnectd_info">Your connection was closed due to an error</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_groups">Groups</string>
    <string name="tab_apps">Application</string>
    <string name="menu_add_friend">Add Friend</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_register">Register</string>
    <string name="menu_create_group">Create Group</string>
    <string name="menu_search_group">Search Group</string>
    <string name="create_group_create">Create</string>
    <string name="input_group_name">Input the shared group name</string>
    <string name="input_group_description">Input the shared group description</string>
    <string name="friend_setting_title">Share Location Settings</string>
    <string name="friend_setting_time_2">2</string>
    <string name="friend_setting_time_5">5</string>
    <string name="friend_setting_time_10">10</string>
    <string name="friend_setting_time_30">30</string>
    <string name="friend_setting_distance_10">10</string>
    <string name="friend_setting_distance_100">100</string>
    <string name="friend_setting_distance_1000">1000</string>
    <string name="friend_setting_distance_5000">5000</string>
    <string name="friend_setting_allow_share">Always allow share my location</string>
    <string name="friend_setting_allow_share_tip">If check this radio button, your location will be automatically sent to 
	 others without any tips forwards to you!</string>
    <string name="friend_setting_share_location_time_from">Share location from hour(24-hour)</string>
    <string name="friend_setting_share_location_time_to">to</string>
    <string name="group_setting_title">Shared Group</string>
    <string name="group_setting_info">Shared Group information</string>
    <string name="group_setting_group_name">Name</string>
    <string name="group_setting_group_owner">Owners</string>
    <string name="group_setting_group_description">Description</string>
    <string name="group_setting_set">Shared Group Setting</string>
    <string name="group_setting_update_time">Last Update Time</string>
    <string name="group_setting_begin_time">Share Start Time</string>
    <string name="group_setting_end_time">Share End Time</string>
    <string name="group_setting_interval_time">Frequency (second)</string>
    <string name="group_setting_edit">Edit</string>
    <string name="group_setting_confirm">OK</string>
    <string name="group_name_rule">characters/numbers/-/_ (length 5~16)</string>
    <string name="group_setting_share_start_time">Share Start Time(24-hour)</string>
    <string name="group_setting_share_end_time">Share End Time(24-hour)</string>
    <string name="search_group_search">Search</string>
    <string name="searching">searching...</string>
    <string name="Prompt">Prompt</string>
    <string name="search_group_adapter_child_join">Join</string>
    <string name="search_group_adapter_child_groupname">Group Name:</string>
    <string name="search_group_adapter_child_groupdescription">Group Description:</string>
    <string name="user_name">UserName:</string>
    <string name="map_item_title">Hello</string>
    <string name="map_item_iam">I am %1$s</string>
    <string name="map_item_iam_bejing">I am in bejing</string>
    <string name="group_illegal">Your group name is illegal or group description is illegal</string>
    <string name="can_not_do_this_on_their_own">Can not do this on their own</string>
    <string name="the_member_is_owner">The member is owner</string>
    <string name="no_friend">No more friend</string>
    <string name="exit_the_group">Exit the group</string>
    <string name="are_you_sure_exit_the_group">Are you sure you want to exit the group %1$s ?</string>
    <string name="start_share">Start Share</string>
    <string name="stop_share">Stop Share</string>
    <string name="add_user_in_this_group">Import friends</string>
    <string name="remove_group">Remove group</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_remove_the_group">Are you sure you want to remove the group %1$s ?</string>
    <string name="message">Message</string>
    <string name="confirm">Confirm</string>
    <string name="create_group_result">Create %1$s %2$s</string>
    <string name="failed">failed</string>
    <string name="successful">Successfully</string>
    <string name="location_request">Location request</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="from">From: %1$s</string>
    <string name="location_Follow_request">Location Follow request</string>
    <string name="are_you_sure_remove_member">Are you sure you want to remove member %1$s</string>
    <string name="you_are_removed_from">You are removed or exits from %1$s</string>
    <string name="you_are_joined">You are joined group %1$s</string>
    <string name="invite_you">%1$s invite you to join into group %2$s</string>
    <string name="search_group_no_result">No matching group found</string>
    <string name="your_friend_name_is_illegal">Your friend name is illegal</string>
    <string name="menu_share_location">Share location</string>
    <string name="menu_request_location">Request location</string>
    <string name="menu_follow_location">Follow</string>
    <string name="menu_share_continuously_location">Share continuously</string>
    <string name="location_head">Position</string>
    <string name="group_team_members">Team members</string>
    <string name="group_setting">Group setting</string>
    <string name="add_friend_tip">Input your friend\'s name</string>
    <string name="add_friend_remark">Please input your friend\'s email address</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="group_only_owner_can_start_share_location">Only group owner can start share location!</string>
    <string name="group_only_owner_can_stop_share_location">Only group owner can stop share location!</string>
    <string name="group_only_owner_can_add_user_in_this_group">Only group owner can add user in this group!</string>
    <string name="group_frequency_change">Frequency change</string>
    <string name="anonymity_login">Try</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_user_name">User name:</string>
    <string name="register_email">Email:</string>
    <string name="register_password">Password:</string>
    <string name="register_confirm_password">Confirm password:</string>
    <string name="register_mobile">Mobile phone:</string>
    <string name="register_input_user_name_promote">Please input your user name!</string>
    <string name="register_input_right_user_name_promote">Please input a right user name!(the rule is characters/numbers/-/_(length 5~16))</string>
    <string name="register_input_email_phone_promote">Please input your email address!</string>
    <string name="register_input_email_promote">Please input a right email address!</string>
    <string name="register_input_password_promote">Please input your password!</string>
    <string name="register_input_confirm_password_promote">Please confrim your password!</string>
    <string name="register_input_check_password_promote">Please check your password and confrim password!</string>
    <string name="register_success">Register successfully!</string>
    <string name="register_failed">Register failed</string>
    <string name="app_installed">[installed]</string>
    <string name="added_by_somebody">You are added by %1$s!</string>
    <string name="removed_by_somebody">You are removed by %1$s!</string>
    <string name="add_somebody_success">Add friend successfully!</string>
    <string name="add_somebody_failed">Add friend failed!</string>
    <string name="remove_somebody_success">Remove friend successfully!</string>
    <string name="remove_somebody_failed">Remove friend failed!</string>
    <string name="authenticate_failed">Authenticate failed!</string>
    <string name="authenticate_success">Authenticate success!</string>
    <string name="app_new">New</string>
    <string name="update">Update</string>
    <string name="install">Install</string>

</resources>