<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:id="@+id/share_setting_layout"
	android:background="#FFFFFFFF" >

	<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
		android:orientation="horizontal" android:padding="10dp" 
		android:background="@drawable/add_fried_top_bg">
		<ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"
			android:src="@drawable/setting_menu_icon"
		></ImageView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/friend_setting_title"
			android:textColor="@color/menu_default_color"
			android:id="@+id/settingTextView"
		/>
	</LinearLayout>
	

	<RadioGroup android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/big_group"
		android:padding="3dp" android:background="@drawable/add_fried_input_bg">

		<RadioButton android:id="@+id/mRadioSharePeriodically"
			android:layout_height="wrap_content" android:layout_width="match_parent"
			android:text="@string/share_periodically"
			android:textColor="@color/menu_default_color"
			android:button="@drawable/setting_time_selector"/>
		<!-- Periodically setting info -->

		<RadioGroup android:id="@+id/share_period_group"
			android:layout_height="wrap_content" android:layout_width="match_parent"
			android:paddingLeft="25dip" android:orientation="horizontal">
			<RadioButton android:id="@+id/two" android:layout_weight="1"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/friend_setting_time_2" android:enabled="false"
				android:textColor="@color/menu_default_color"
				android:button="@drawable/setting_time_selector" />
			<RadioButton android:id="@+id/five" android:enabled="false"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:textColor="@color/menu_default_color"
				android:layout_width="wrap_content" android:text="@string/friend_setting_time_5" 
				android:button="@drawable/setting_time_selector" />
			<RadioButton android:id="@+id/ten" android:layout_weight="1"
				android:textColor="@color/menu_default_color"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/friend_setting_time_10"  android:enabled="false"
				android:button="@drawable/setting_time_selector" />
			<RadioButton android:id="@+id/halfhour" android:enabled="false"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:textColor="@color/menu_default_color"
				android:layout_width="wrap_content" android:text="@string/friend_setting_time_30"
				android:button="@drawable/setting_time_selector"  />
			<RadioButton android:id="@+id/timehide" android:enabled="false"
				android:textColor="@color/menu_default_color"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:visibility="gone" />
		</RadioGroup>

		<RadioButton android:id="@+id/mRadioShareByDis"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:text="@string/share_by_distance" 
			android:textColor="@color/menu_default_color"
			android:button="@drawable/setting_time_selector" />

		<RadioGroup android:id="@+id/share_distance_group"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_width="match_parent" android:paddingLeft="25dip">

			<RadioButton android:id="@+id/tenmeters" android:enabled="false"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:textColor="@color/menu_default_color"
				android:layout_width="wrap_content" android:text="@string/friend_setting_distance_10" 
				android:button="@drawable/setting_time_selector" />
			<RadioButton android:id="@+id/hundred" android:enabled="false"
				android:textColor="@color/menu_default_color"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/friend_setting_distance_100" 
				android:button="@drawable/setting_time_selector" />

			<RadioButton android:id="@+id/thousand" android:enabled="false"
				android:textColor="@color/menu_default_color"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/friend_setting_distance_1000"
				android:button="@drawable/setting_time_selector"  />
			<RadioButton android:id="@+id/fivethousand" android:enabled="false"
				android:textColor="@color/menu_default_color"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/friend_setting_distance_5000"
				android:button="@drawable/setting_time_selector"  />
			
			<RadioButton android:id="@+id/distancehide" android:enabled="false"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:visibility="gone" />
		</RadioGroup>

	</RadioGroup>


	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:padding="3dp" android:background="@drawable/add_fried_input_bg">
	
		<CheckBox android:id="@+id/share_always_allow"
					android:textColor="@color/menu_default_color"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/friend_setting_allow_share"
					android:button="@drawable/setting_period_loc_selector"  />
					
		<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/menu_default_color" 
				android:text="@string/friend_setting_allow_share_tip"/>	
				
	</LinearLayout>
	
	<!--  save and cancle button -->
	<RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent"
			android:orientation="horizontal" android:layout_margin="2dp" 
			android:id="@+id/btn_layout"
			android:paddingLeft="30dp" 
			android:paddingRight="30dp" >
			
		<Button android:layout_height="wrap_content" android:layout_width="100dp"
			android:id="@+id/btnLocationSettingSave"
			android:text="@string/lab_save"
			android:textColor="@color/text_default_color"
			android:background="@drawable/button"
			android:layout_alignParentLeft="true" 
			android:paddingLeft="20dp" 
			android:paddingRight="20dp"/>		
		<Button android:layout_height="wrap_content" android:layout_width="100dp"
			android:id="@+id/btnLocationSettingCancle"
			android:text="@string/lab_cancle"
			android:textColor="@color/text_default_color"
			android:background="@drawable/button"
			android:layout_alignParentRight="true"
			android:paddingLeft="20dp" 
			android:paddingRight="20dp" />
	</RelativeLayout>
		
</LinearLayout>
