<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent" android:layout_width="match_parent"
	android:orientation="vertical" android:id="@+id/add_dialog"
	android:background="#FFFFFFFF">

	<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
		android:orientation="horizontal" android:padding="10dp" 
		android:background="@drawable/add_fried_top_bg">
		<ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:src="@drawable/add_fried_icon"
			android:layout_gravity="center_vertical"
		></ImageView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_add_friend"
			android:textColor="@color/menu_default_color"
		/>
	</LinearLayout>

	<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
		android:orientation="vertical" android:layout_margin="3dp">
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:background="@drawable/menu_popup_edit_bg"
			android:layout_gravity="left" android:paddingTop="10dp"
			android:paddingLeft="20dp" android:paddingRight="20dp"
			android:paddingBottom="20dp">
			<TextView android:id="@+id/add_friend_input_tip"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/add_friend_tip" 
				android:textColor="@color/menu_default_color"/>
			<EditText android:id="@+id/add_friend_edit" 
				android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
				android:background="@drawable/add_friend_input"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:layout_below="@+id/add_friend_input_tip" 
				/>
			<TextView 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/add_friend_remark"
				android:textColor="@color/menu_default_color"
				android:layout_below="@+id/add_friend_edit" />
		</RelativeLayout>
	
		<RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent"
			android:orientation="horizontal" android:layout_margin="5dp" 
			android:paddingLeft="30dp" 
			android:paddingRight="30dp" >
			
			<Button android:layout_height="wrap_content" android:layout_width="@dimen/double_button_width"
				android:id="@+id/add_friend_ok"
				android:text="@string/lab_ok"
				android:textColor="@color/text_default_color"
				android:background="@drawable/button"
				android:layout_alignParentLeft="true" 
				android:paddingLeft="20dp" 
				android:paddingRight="20dp"/>		
			<Button android:layout_height="wrap_content" android:layout_width="@dimen/double_button_width"
				android:id="@+id/add_friend_cancel"
				android:text="@string/lab_cancle"
				android:textColor="@color/text_default_color"
				android:background="@drawable/button"
				android:layout_alignParentRight="true"
				android:paddingLeft="20dp" 
				android:paddingRight="20dp" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>